--- a/2nd Semester/Introduction to Web Technologies/table.html
+++ b/2nd Semester/Introduction to Web Technologies/table.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Tabelas</h1>
-    <p>A minha primeira tabela...</p>
-    <hr>
+    <div id="logo">
+        <p>A minha primeira tabela...</p>
+    </div>
     <table border="1">
         <tr>
             <th>Num</th>
