--- a/2nd Semester/Introduction to Web Technologies/table.html
+++ b/2nd Semester/Introduction to Web Technologies/table.html
@@ -10,27 +10,29 @@
     <div id="logo">
         <p>A minha primeira tabela...</p>
     </div>
-    <table border="1">
-        <tr>
-            <th>Num</th>
-            <th>Nome</th>
-            <th>Email</th>
-        </tr>
-        <tr>
-            <td class="num">1</td>
-            <td class="nome">José</td>
-            <td  class="email">jose@gmail.com</td>
-        </tr>
-        <tr>
-            <td class="num">2</td>
-            <td class="nome">Manuel</td>
-            <td  class="email">manuel@outlook.com</td>
-        </tr>
-        <tr>
-            <td class="num">3</td>
-            <td class="nome">Joaquim</td>
-            <td  class="email">joaquim@protonmail.com</td>
-        </tr>
-    </table>
+    <div id="table">
+        <table border="1">
+            <tr>
+                <th>Num</th>
+                <th>Nome</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td class="num">1</td>
+                <td class="nome">José</td>
+                <td  class="email">jose@gmail.com</td>
+            </tr>
+            <tr>
+                <td class="num">2</td>
+                <td class="nome">Manuel</td>
+                <td  class="email">manuel@outlook.com</td>
+            </tr>
+            <tr>
+                <td class="num">3</td>
+                <td class="nome">Joaquim</td>
+                <td  class="email">joaquim@protonmail.com</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
