--- a/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/index.html
+++ b/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/index.html
@@ -4,77 +4,95 @@
   <title>Bootstrap 5 Website Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="styles.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <!-- Container wrapper -->
     <div class="container-fluid">
-        <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">LOGO</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Produtos</a>
-        </li>
-        <li class="nav-item">
+      <!-- Navbar brand -->
+      <a class="navbar-brand" href="index.html">
+        <img src="Images/logo.jpg" class="rounded-pill" height="50" alt="LOGO"/>
+      </a>
+  
+      <!-- Collapsible wrapper -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!-- Left links -->
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Produtos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Autor</a>
-        </li>
-        <li class="nav-item">
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Contactos</a>
-        </li>
+          </li>
         </ul>
-        <form class="d-flex">
-            <input class="form-control me-2" type="text" placeholder="Search">
-            <button class="btn btn-primary" type="button">Search</button>
-        </form>
+      </div>
     </div>
-</nav>
+  </nav>
 
 <div class="p-5 bg-primary text-white text-center">
   <h1>LOJA ONLINE</h1>
   <p>Aqui encontra tudo aos melhores preços!</p> 
 </div>
 
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3 class="mt-4">Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
+<div class="container-fluid mt-4 my-mx">
+  <div class="row justify-content-center">
+    <div class="mb-3 pt-3 position-relative">
+      <h2>Categorias</h1>
     </div>
-    <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2020</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-
-      <h2 class="mt-5">TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2020</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <div class="col-sm-1 col-md-1 col-6 my-col align-items-center">
+      <div>
+        <a href="#"><img class="img-fluid" src="Images/smartphones.png"></a>
+      <p class="mt-4 text-center smartphone">Smartphones e Tablets</p>
+      </div>
+    </div>
+    <div class="categorias col-sm-1 col-md-1 col-6 my-col">
+      <div>
+          <a href="#"><img class="img-fluid mt-3" src="Images/wearables.png"></a>
+      </div>
+      <p class="mt-2 text-center">Wearables e Mobile Audio</p>
+    </div>
+    <div class="categorias col-sm-1 col-md-1 col-6 my-col">
+      <div>
+        <a href="#"><img class="img-fluid mt-3" src="Images/laptops.png"></a>
+      </div>
+      <p class="mt-2 text-center">Desktops e Laptops</p>
+    </div>
+    <div class="categorias col-sm-1 col-md-1 col-6 my-col">
+      <div class="">
+        <a href="#"><img class="img-fluid mt-4 ms-3 cpu" src="Images/cpu.png"></a>
+      </div>
+      <p class="my-mt text-center">Componentes PC</p>
+    </div>
+    <div class="categorias col-sm-1 col-md-1 col-6 my-col">
+      <div>
+        <a href="#"><img class="img-fluid mt-3" src="Images/tv.png"></a>
+      </div>
+      <p class="my-mt-2 text-center">Televisores e Projetores</p>
+    </div>    
+    <div class="categorias col-sm-1 col-md-1 col-6 my-col">
+      <div>
+        <a href="#"><img class="img-fluid mt-5" src="Images/microwave.png"></a>
+      </div>
+      <p class="mt-5 text-center">Pequenos Eletrodomésticos</p>
+    </div>
+    <div class="categorias col-sm-1 col-md-1 col-6 my-col">
+      <div>
+        <a href="#"><img class="img-fluid mt-5" src="Images/grandes_eletrodomesticos.png"></a>
+      </div>
+      <p class="mt-3 text-center">Grandes Eletrodomésticos</p>
+    </div>
+    <div class="categorias col-sm-1 col-md-1 col-6 my-col">
+      <div>
+        <a href="#"><img class="img-fluid mt-5" src="Images/smarthome.png"></a>
+      </div>
+      <p class="mt-4 text-center">Smart Home e Iluminação</p>
     </div>
   </div>
 </div>
