Update Trabalho_Pratico (ITW)
Added produtos.html and contactos.html. Also changed the script and styles files

--- a/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/index.html
+++ b/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/index.html
@@ -4,6 +4,7 @@
   <title>Tech4U</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="/GitHub/EST/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/Images/logo.png"/>
   <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="styles.css" rel="stylesheet">
   <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
@@ -15,7 +16,7 @@
   <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img class="rounded-circle" src="Images/logo.jpg" height="50" alt="Logo" />
+      <img class="rounded-circle" src="Images/logo.png" height="50" alt="Logo" />
     </a>
     
     <!-- Botão de colapso para dispositivos móveis -->
@@ -28,13 +29,13 @@
       <!-- Elementos à esquerda -->
       <ul class="navbar-nav me-auto mt-2">
         <li class="nav-item">
-          <a class="nav-link" href="#">Produtos</a>
+          <a class="nav-link" href="produtos.html">Produtos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="autor.html">Autor</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contactos</a>
+          <a class="nav-link" href="contactos.html">Contactos</a>
         </li>
       </ul>
 
@@ -218,10 +219,10 @@
 
 <!-- PROMOÇÕES -->
 <!-- Linha do heading + botão -->
-<div class="container-fluid mt-5">
-  <div class="row my-4">
-    <h1 class="col text-left">Promoções</h1>
-    <div class=" align-items-center col d-flex justify-content-end me-2">
+<div class="container-fluid ms-3">
+  <div class="row my-5">
+    <h1 class="col text-left me-4">Promoções</h1>
+    <div class=" align-items-center col d-flex justify-content-end me-3">
       <button type="button" class="btn btn-primary rounded-pill border-primary">VER MAIS</button>
     </div>
   </div>
@@ -232,59 +233,60 @@
  
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill orange w-25 novidade my-4 me-2">Promo</span>
+      <span class="badge rounded-pill orange w-25 my-4 me-2">Promo</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/iphone-15-pro-max.jpg" alt="Card image" style="width:100%">
       <div class="card-body">
         <h5 class="card-title my-card-title">Smartphone Apple iPhone 15 Pro Max | 256GB | Titânio Preto</h5>
-          <p class="h2 price-promo">1299,99 €</p>
-          <p class="h5 price text-decoration-line-through">1499,99 €</p>
+          <p class="h2 price">1299,99 €</p>
+          <p class="h5 pvpr text-decoration-line-through">1499,99 €</p>
       </div>
     </a>
   </div>
 
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill orange w-25 novidade my-4 me-2">Promo</span>
+      <span class="badge rounded-pill orange w-25 my-4 me-2">Promo</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/macbook-pro.jpg" alt="Card image" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Apple Macbook Pro | SSD 512GB | 36GB RAM | Preto Sideral</h5>
-          <p class="h2 price-promo">3199,99 €</p>
-          <p class="h5 price text-decoration-line-through">3559,99 €</p>
+          <p class="h2 price">3199,99 €</p>
+          <p class="h5 pvpr text-decoration-line-through">3559,99 €</p>
       </div>
     </a>
   </div>
 
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill orange w-25 novidade my-4 me-2">Promo</span>
+      <span class="badge rounded-pill orange w-25 my-4 me-2">Promo</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/redmi-note-13-pro-5g.jpg" alt="Card image" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Smartphone Xiaomi Redmi Note 13 Pro 5G | 12/512GB | Preto Meia-Noite</h5>
-          <p class="h2 price-promo">379,99 €</p>
-          <p class="h5 price text-decoration-line-through">449,99 €</p>
+          <p class="h2 price">379,99 €</p>
+          <p class="h5 pvpr text-decoration-line-through">449,99 €</p>
       </div>
     </a>
   </div>
 
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill orange w-25 novidade my-4 me-2">Promo</span>
+      <span class="badge rounded-pill orange w-25 my-4 me-2">Promo</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/hisense-65A6K.jpg" alt="Card image" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Televisão Hisense 65A6K (2023) | SmartTV 65" LED 4K UHD</h5>
-          <p class="h2 price-promo">459,99 €</p>
-          <p class="h5 price text-decoration-line-through">499,99 €</p>
+          <p class="h2 price">459,99 €</p>
+          <p class="h5 pvpr text-decoration-line-through">499,99 €</p>
       </div>
     </a>
   </div>
+  
   
 </div>
 <!-- PROMOÇÕES -->
@@ -305,7 +307,7 @@
  
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill bg-primary w-25 novidade my-4 me-2">Novidade</span>
+      <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/ps5.jpg" alt="Card image" style="width:100%">
@@ -318,7 +320,7 @@
 
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill bg-primary w-25 novidade my-4 me-2">Novidade</span>
+      <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/asus-zenbook-14.jpg" alt="Card image" style="width:100%">
@@ -331,7 +333,7 @@
 
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill bg-primary w-25 novidade my-4 me-2">Novidade</span>
+      <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/razer-headset.jpg" alt="Card image" style="width:100%">
@@ -344,7 +346,7 @@
 
   <div class="card my-products-card me-3">
     <div class="d-flex justify-content-end">
-      <span class="badge rounded-pill bg-primary w-25 novidade my-4 me-2">Novidade</span>
+      <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
     <a class="my-card-title" href="#">
       <img class="card-img-top zoom-new" src="Images/oneplus-nord-n30.jpg" alt="Card image" style="width:100%">
@@ -358,6 +360,7 @@
 </div>
 <!-- NOVIDADES -->
 
+<!-- FOOTER -->
 <div class="mt-5 p-4 bg-light text-dark container-fluid" style="width:100%">
   <div class="row">
     <div class="col-md-3 footer">
