--- a/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/autor.html
+++ b/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/autor.html
@@ -7,6 +7,7 @@
     <title>Sobre Mim</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link href="styles.css" rel="stylesheet">
+    <link href="autor.css" rel="stylesheet">
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 <body class="bg">
