--- a/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/contactos.html
+++ b/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/contactos.html
@@ -8,6 +8,7 @@
     <!-- Inclua o Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link href="styles.css" rel="stylesheet">
+    <link href="contactos.css" rel="stylesheet">
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 <body class="bg">
@@ -156,7 +157,7 @@
 
 
   <!-- FOOTER -->
-<div class="mt-5 p-4 bg-light text-dark container-fluid" style="width:100%">
+<div class="my-mt-footer mt-5 p-4 bg-light text-dark container-fluid" style="width:100%">
     <div class="row">
       <div class="col-md-3 footer">
         <h5>APOIO AO CLIENTE</h5>
