--- a/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/index.html
+++ b/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/index.html
@@ -250,7 +250,7 @@
     <div class="d-flex justify-content-end">
       <span class="badge rounded-pill orange w-25 my-4 me-2">Promo</span>
     </div>
-    <a class="my-card-title" href="#">
+    <a class="my-card-title" href="apple_macbook_pro.html">
       <img class="card-img-top zoom-new" src="Images/macbook-pro.jpg" alt="Apple Macbook Pro" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Apple Macbook Pro | SSD 512GB | 36GB RAM | Preto Sideral</h5>
@@ -310,7 +310,7 @@
     <div class="d-flex justify-content-end">
       <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
-    <a class="my-card-title" href="#">
+    <a class="my-card-title" href="playstation5_slim.html">
       <img class="card-img-top zoom-new" src="Images/ps5.jpg" alt="PlayStation 5 Slim" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Consola PlayStation 5 Slim 1TB | +  Hogwarts Legacy | + Uncharted: Legacy of Thieves</h5>
@@ -323,7 +323,7 @@
     <div class="d-flex justify-content-end">
       <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
-    <a class="my-card-title" href="#">
+    <a class="my-card-title" href="asus_zenbook_14.html">
       <img class="card-img-top zoom-new" src="Images/asus-zenbook-14.jpg" alt="Asus Zenbook 14 Flip OLED" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Asus Zenbook 14 Flip OLED | UP3404VA-73BOHDAP1</h5>
@@ -336,7 +336,7 @@
     <div class="d-flex justify-content-end">
       <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
-    <a class="my-card-title" href="#">
+    <a class="my-card-title" href="razer_blackshark.html">
       <img class="card-img-top zoom-new" src="Images/razer-headset.jpg" alt="Razer Blackshark V2" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Headset Razer Blackshark V2 X 7.1 | Branco</h5>
@@ -349,7 +349,7 @@
     <div class="d-flex justify-content-end">
       <span class="badge rounded-pill bg-primary w-25 my-4 me-2">New</span>
     </div>
-    <a class="my-card-title" href="#">
+    <a class="my-card-title" href="oneplus_nord_ce_3_lite.html">
       <img class="card-img-top zoom-new" src="Images/oneplus-nord-ce3-lite.jpg" alt="Oneplus Nord CE 3 Lite 5G" style="width:100%">
       <div class="card-body mt-3">
         <h5 class="card-title my-card-title">Smartphone Oneplus Nord CE 3 Lite 5G | 8/128 GB | Cinza Cromático</h5>
