--- a/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/contactos.html
+++ b/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/contactos.html
@@ -134,10 +134,10 @@
                 <div class="col-md-6 mb-3 w-25">
                     <h5>Segue-nos</h5>
                     <div class="mx-2">
-                        <a href="https://twitter.com/" target="_blank"><img src="Images/twitter.png" class="brand zoom-img ms-2" height="35"></a>
-                        <a href="https://www.instagram.com/" target="_blank"><img src="Images/instagram.webp" class="brand zoom-img ms-2" height="35"></a>
-                        <a href="https://www.reddit.com/" target="_blank"><img src="Images/reddit.png" class="brand zoom-img ms-2" height="35"></a>
-                        <a href="https://mastodon.social/" target="_blank"><img src="Images/mastodon.png" class="brand zoom-img ms-2 rounded-2" height="35"></a>
+                        <a href="https://twitter.com/" target="_blank"><img src="Images/twitter.png" class="brand zoom-img ms-2" height="25"></a>
+                        <a href="https://www.instagram.com/" target="_blank"><img src="Images/instagram.webp" class="brand zoom-img ms-2" height="25"></a>
+                        <a href="https://www.reddit.com/" target="_blank"><img src="Images/reddit.png" class="brand zoom-img ms-2" height="25"></a>
+                        <a href="https://mastodon.social/" target="_blank"><img src="Images/mastodon.png" class="brand zoom-img ms-2 rounded-2" height="25"></a>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
 
 
   <!-- FOOTER -->
-<div class="my-mt-footer mt-5 p-4 bg-light text-dark container-fluid" style="width:100%">
+<div class="mt-5 p-4 bg-light text-dark container-fluid" style="width:100%">
     <div class="row">
       <div class="col-md-3 footer">
         <h5>APOIO AO CLIENTE</h5>
